# VulkanEngine

./: .gitignore  create-solution.bat
shaders/: ps.hlsl  vs.hlsl
src/: CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Filesystem.cpp  Filesystem.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.h  TestChild.cpp  TestChild.h  TestChild2.cpp  TestChild2.h  Window.cpp  Window.h  main.cpp
src/gateware/: Documentation.html  Gateware.h  LICENSES.md  README  README.md  version.txt
